--- a/src/boundary/InsertFile/insertFile.fxml
+++ b/src/boundary/InsertFile/insertFile.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.InsertFileBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.InsertFile.InsertFileBoundary">
    <children>
       <ComboBox fx:id="list" layoutX="59.0" layoutY="138.0" prefHeight="26.0" prefWidth="145.0" promptText="Seleziona...">
       </ComboBox>
