--- a/src/boundary/SearchFilamento/ricerca.fxml
+++ b/src/boundary/SearchFilamento/ricerca.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="570.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.Ricerca">
+<AnchorPane prefHeight="570.0" prefWidth="860.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.SearchFilamento.Ricerca">
    <children>
       <TextField fx:id="Inf" layoutX="33.0" layoutY="44.0" prefHeight="25.0" prefWidth="70.0" promptText="inf" AnchorPane.leftAnchor="33.0" AnchorPane.topAnchor="44.0" />
       <TextField fx:id="Sup" layoutX="33.0" layoutY="75.0" prefHeight="25.0" prefWidth="70.0" promptText="sup" AnchorPane.leftAnchor="33.0" AnchorPane.topAnchor="75.0" />
@@ -79,8 +79,8 @@
       <TextField fx:id="lum" layoutX="278.0" layoutY="76.0" prefHeight="31.0" prefWidth="57.0" />
       <TextField fx:id="ellInf" layoutX="280.0" layoutY="122.0" prefHeight="31.0" prefWidth="57.0" />
       <TextField fx:id="ellSup" layoutX="357.0" layoutY="122.0" prefHeight="31.0" prefWidth="57.0" />
-      <Button fx:id="searchLum" layoutX="367.0" layoutY="75.0" mnemonicParsing="false" onAction="#searchLum" prefHeight="31.0" prefWidth="65.0" text="Button" />
-      <Button fx:id="searchEll" layoutX="436.0" layoutY="122.0" mnemonicParsing="false" onAction="#searchEll" text="Button" />
+      <Button fx:id="searchLum" layoutX="367.0" layoutY="75.0" mnemonicParsing="false" onAction="#searchLum" prefHeight="31.0" prefWidth="166.0" text="Cerca per luminosità" />
+      <Button fx:id="searchEll" layoutX="436.0" layoutY="122.0" mnemonicParsing="false" onAction="#searchEll" text="Cerca per ellitticità" />
       <Text layoutX="346.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="\%" wrappingWidth="20.99999690055847" />
       <Text layoutX="278.0" layoutY="65.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Percentuale luminosità" wrappingWidth="157.99999690055847" />
       <Text fx:id="frazione" layoutX="273.0" layoutY="175.0" strokeType="OUTSIDE" strokeWidth="0.0" text="..." wrappingWidth="225.99999690055847" />
