InsertFile e finiti tutti i requisiti funzionali. manca test case e qualche controllo sui requisiti. e su requisito di inserimento file manca cil controllo dei valori precedenti

--- a/src/boundary/home.fxml
+++ b/src/boundary/home.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.HomePageBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.HomePageBoundary">
    <children>
       <Label layoutX="237.0" layoutY="22.0" prefHeight="21.0" prefWidth="89.0" text="Ad Astra">
          <font>
@@ -15,9 +15,12 @@
       <Button fx:id="bSat" layoutX="418.0" layoutY="68.0" mnemonicParsing="false" onAction="#onSatellitePressed" prefHeight="26.0" prefWidth="146.0" text="Inserisci Satellite" />
       <Button fx:id="bStrum" layoutX="418.0" layoutY="115.0" mnemonicParsing="false" onAction="#onStrumentoPressed" prefHeight="26.0" prefWidth="146.0" text="Inserisci Strumento" />
       <Label layoutX="31.0" layoutY="73.0" text="Ricerca strutture estese:" />
-      <Button fx:id="button" layoutX="31.0" layoutY="115.0" mnemonicParsing="false" onAction="#onInfoPressed" prefHeight="26.0" prefWidth="195.0" text="Informazioni Filamenti" />
-      <Button layoutX="31.0" layoutY="161.0" mnemonicParsing="false" onAction="#onRegionPressed" prefHeight="26.0" prefWidth="195.0" text="Ricerca in una regione" />
-      <Button layoutX="31.0" layoutY="206.0" mnemonicParsing="false" onAction="#onStelleInFilPressed" prefHeight="26.0" prefWidth="195.0" text="Ricerca stelle in Filamento" />
-      <Button fx:id="bUtente" onAction="#onUtentePressed" layoutX="403.0" layoutY="168.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="176.0" text="Inserisci nuovo utente" />
+      <Button fx:id="button" layoutX="31.0" layoutY="115.0" mnemonicParsing="false" onAction="#onInfoPressed" prefHeight="26.0" prefWidth="195.0" text="Informazioni Filamenti" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="115.0" />
+      <Button layoutX="31.0" layoutY="161.0" mnemonicParsing="false" onAction="#onRegionPressed" prefHeight="26.0" prefWidth="195.0" text="Ricerca in una regione" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="150.0" />
+      <Button layoutX="31.0" layoutY="206.0" mnemonicParsing="false" onAction="#onStelleInFilPressed" prefHeight="26.0" prefWidth="195.0" text="Ricerca stelle in Filamento" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="185.0" />
+      <Button fx:id="bUtente" layoutX="403.0" layoutY="168.0" mnemonicParsing="false" onAction="#onUtentePressed" prefHeight="26.0" prefWidth="176.0" text="Inserisci nuovo utente" />
+      <Button layoutX="31.0" layoutY="216.0" mnemonicParsing="false" onAction="#onFindStelleRegioneFilamento" text="Frazione Stelle nei filamenti di una regione" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0" />
+      <Button layoutX="58.0" layoutY="260.0" mnemonicParsing="false" onAction="#onPosizioneDiUnaStellaRispettoSpinaDorsale" text="Posizione stella rispetto alla spina dorsale" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="255.0" />
+      <Button fx:id="inFileBtn" layoutX="441.0" layoutY="220.0" mnemonicParsing="false" onAction="#onInsertFilePressed" text="Inserisci File" />
    </children>
 </AnchorPane>
