--- a/src/boundary/InsertFile/insertFile.fxml
+++ b/src/boundary/InsertFile/insertFile.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.InsertFile.InsertFileBoundary">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.InsertFile.InsertFileUI">
    <children>
-      <ComboBox fx:id="list" layoutX="59.0" layoutY="138.0" prefHeight="26.0" prefWidth="145.0" promptText="Seleziona...">
+      <ComboBox fx:id="listCorpi" layoutX="28.0" layoutY="138.0" prefHeight="26.0" prefWidth="149.0" promptText="Corpi Celesti">
       </ComboBox>
       <Button layoutX="383.0" layoutY="217.0" mnemonicParsing="false" onAction="#onImportFile" text="Importa" />
       <TextField fx:id="path" layoutX="278.0" layoutY="138.0" promptText="Inserisci persorso file" />
-      <Button layoutX="474.0" layoutY="217.0" mnemonicParsing="false" text="Cancella" />
+      <Button fx:id="homeBtn" layoutX="482.0" layoutY="51.0" onAction="#getHomePage" mnemonicParsing="false" text="Home" />
       <Button layoutX="462.0" layoutY="138.0" mnemonicParsing="false" onAction="#onChooseFile" prefHeight="26.0" prefWidth="39.0" text="..." />
-      <Label layoutX="66.0" layoutY="37.0" prefHeight="16.0" prefWidth="130.0" text="Inserisci file" />
+      <Label layoutX="66.0" layoutY="37.0" prefHeight="16.0" prefWidth="130.0" text="Inserisci file">
+         <font>
+            <Font name="System Bold Italic" size="20.0" />
+         </font></Label>
+      <ComboBox fx:id="listSat" layoutX="26.0" layoutY="205.0" prefWidth="150.0" promptText="Satellite" />
    </children>
 </AnchorPane>
