--- a/src/boundary/home.fxml
+++ b/src/boundary/home.fxml
@@ -22,5 +22,6 @@
       <Button layoutX="31.0" layoutY="216.0" mnemonicParsing="false" onAction="#onFindStelleRegioneFilamento" text="Frazione Stelle nei filamenti di una regione" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="220.0" />
       <Button layoutX="58.0" layoutY="260.0" mnemonicParsing="false" onAction="#onPosizioneDiUnaStellaRispettoSpinaDorsale" text="Posizione stella rispetto alla spina dorsale" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="255.0" />
       <Button fx:id="inFileBtn" layoutX="441.0" layoutY="220.0" mnemonicParsing="false" onAction="#onInsertFilePressed" text="Inserisci File" />
+      <Button fx:id="searchFil" layoutX="30.0" layoutY="293.0" mnemonicParsing="false" onAction="#searchFil" text="Ricerca Filamenti e informazione Segmenti" />
    </children>
 </AnchorPane>
