--- a/src/boundary/SearchFilamento/ricerca.fxml
+++ b/src/boundary/SearchFilamento/ricerca.fxml
@@ -8,11 +8,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="570.0" prefWidth="984.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.SearchFilamento.Ricerca">
+<AnchorPane prefHeight="594.0" prefWidth="984.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="boundary.SearchFilamento.Ricerca">
    <children>
-      <TextField fx:id="Inf" layoutX="14.0" layoutY="63.0" prefHeight="25.0" prefWidth="70.0" promptText="min" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="63.0" />
-      <TextField fx:id="Sup" layoutX="99.0" layoutY="63.0" prefHeight="25.0" prefWidth="70.0" promptText="max" AnchorPane.leftAnchor="99.0" AnchorPane.topAnchor="63.0" />
-      <Button fx:id="search" layoutX="181.0" layoutY="63.0" mnemonicParsing="false" onAction="#search" prefHeight="25.0" prefWidth="70.0" text="Cerca" AnchorPane.leftAnchor="181.0" AnchorPane.topAnchor="63.0" />
+      <TextField fx:id="Inf" layoutX="14.0" layoutY="125.0" prefHeight="25.0" prefWidth="70.0" promptText="min" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="125.0" />
+      <TextField fx:id="Sup" layoutX="99.0" layoutY="125.0" prefHeight="25.0" prefWidth="70.0" promptText="max" AnchorPane.leftAnchor="99.0" AnchorPane.topAnchor="125.0" />
+      <Button fx:id="search" layoutX="181.0" layoutY="125.0" mnemonicParsing="false" onAction="#search" prefHeight="25.0" prefWidth="70.0" text="Cerca" AnchorPane.leftAnchor="181.0" AnchorPane.topAnchor="125.0" />
       <TableView fx:id="data" layoutY="199.0" prefHeight="371.0" prefWidth="860.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="199.0">
         <columns>
             <TableColumn fx:id="nome" prefWidth="130.0" text="Nome">
@@ -62,14 +62,14 @@
             </TableColumn>
         </columns>
       </TableView>
-      <Button fx:id="next" layoutX="943.0" layoutY="168.0" mnemonicParsing="false" onAction="#next" prefHeight="31.0" prefWidth="41.0" text="&gt;&gt;" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="168.0" />
-      <Button fx:id="back" layoutX="902.0" layoutY="168.0" mnemonicParsing="false" onAction="#back" prefHeight="20.0" prefWidth="41.0" text="&lt;&lt;" AnchorPane.rightAnchor="41.0" AnchorPane.topAnchor="168.0" />
+      <Button fx:id="next" layoutX="943.0" layoutY="168.0" mnemonicParsing="false" onAction="#next" prefHeight="31.0" prefWidth="49.0" text="&gt;&gt;" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="168.0" />
+      <Button fx:id="back" layoutX="894.0" layoutY="168.0" mnemonicParsing="false" onAction="#back" prefHeight="31.0" prefWidth="49.0" text="&lt;&lt;" AnchorPane.rightAnchor="49.0" AnchorPane.topAnchor="168.0" />
       <Text fx:id="numElements" layoutX="10.0" layoutY="190.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="265.13671875" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="173.8134765625" />
       <Text fx:id="page" layoutX="751.0" layoutY="189.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="150.0000035762787" AnchorPane.rightAnchor="82.99999642372131" AnchorPane.topAnchor="172.8134765625" />
       <TextField fx:id="idFil" layoutX="739.0" layoutY="47.0" prefHeight="31.0" prefWidth="150.0" promptText="id filamento" AnchorPane.topAnchor="47.0" />
       <Button fx:id="searchBranch" layoutX="739.0" layoutY="109.0" mnemonicParsing="false" onAction="#searchBranch" prefHeight="31.0" prefWidth="150.0" text="Mostra Segmenti" AnchorPane.topAnchor="109.0" />
       <TextField fx:id="sat" layoutX="739.0" layoutY="78.0" prefHeight="31.0" prefWidth="150.0" promptText="satellite" AnchorPane.topAnchor="78.0" />
-      <Text layoutX="14.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ricerca Filamenti con un numero di segmenti compreso nell'intervallo:" wrappingWidth="257.9999969005585" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="20.0" />
+      <Text layoutX="14.0" layoutY="97.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ricerca Filamenti con un numero di segmenti compreso nell'intervallo:" wrappingWidth="257.9999969005585" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="81.0" />
       <Text layoutX="739.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ricerca Segmenti del Filamento:" wrappingWidth="243.0000049099326" AnchorPane.topAnchor="20.0" />
       <Text layoutX="322.0" layoutY="36.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ricerca Filamenti con Luminosità maggiore del:" wrappingWidth="326.0000035762787" />
       <TextField fx:id="lum" layoutX="322.0" layoutY="47.0" prefHeight="31.0" prefWidth="57.0" />
@@ -81,6 +81,7 @@
       <Text layoutX="322.0" layoutY="99.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ricerca Filamenti con Ellitticità nell'intervallo:" wrappingWidth="307.9999969005585" />
       <Text fx:id="frazione" layoutX="323.0" layoutY="163.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="352.9999969005585" />
       <Text fx:id="frazione1" layoutX="383.0" layoutY="130.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="21.000001966953278" />
-      <Text fx:id="frazione11" layoutX="88.0" layoutY="84.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="21.000001966953278" />
+      <Text fx:id="frazione11" layoutX="88.0" layoutY="146.0" strokeType="OUTSIDE" strokeWidth="0.0" text="-" wrappingWidth="21.000001966953278" />
+      <Button fx:id="Home" layoutX="14.0" layoutY="15.0" mnemonicParsing="false" onAction="#home" prefHeight="31.0" prefWidth="93.0" text="Home" />
    </children>
 </AnchorPane>
